# LiDAR-to-Mobile

./: .gitmodules  README.md
mobile_app/: README.md  pubspec.yaml
mobile_app/lib/: main.dart
mobile_app/web/: index.html  manifest.json
raspi-app/: 01-livox-receiver-network-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  network-config.yaml  setup.sh
raspi-app/data/accumulated_frames/: 1000_0.ply  100_0.ply  10_0.ply  125_0.ply  1500_0.ply  150_0.ply  15_0.ply  175_0.ply  2000_0.ply  200_0.ply  208_0.ply  20_0.ply  25_0.ply  30_0.ply  40_0.ply  500_0.ply  50_0.ply  60_0.ply  70_0.ply  750_0.ply  80_0.ply  90_0.ply  readme.txt
raspi-app/include/: LidarInterface.hpp  common.hpp
raspi-app/src/: main.cpp  test.cpp
unity-mobile-app/: .gitignore  README.md  UpgradeLog.htm
unity-mobile-app/Assets/Adaptive Performance/: AdaptivePerformanceGeneralSettings.asset
unity-mobile-app/Assets/Resources/: dummyPoints.txt
unity-mobile-app/Assets/Resources/Materials/: New Material.mat  temp.mat
unity-mobile-app/Assets/Scenes/: SampleScene.unity
unity-mobile-app/Assets/Scripts/: CameraOrbit.cs  PointCloudVisualizer.cs  UDPReceiver.cs
unity-mobile-app/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
unity-mobile-app/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
